# kmn-pairs

./: Cargo.toml  README.md
src/: cmd.rs  kmn_serde.rs  lib.rs  main.rs  menu.rs
src/menu/: action.rs
test-data/: example-2-10-19.json  example-2-12-37.json  rank-3-10-17-t1  rank-3-17-35-info-clean.json  rank-3-17-35-info.json  rank-3-17-35.json  test-data-2-10-19-t1  test-data-2-10-19-t2  test-data-2-10-30-t1  test-data-2-11-31-t1  test-data-2-3-13-t1  test-data-2-5-11-t-1  test-data-3-10-19-t1  test-data-3-10-19-t1-solution
